--- a/.classpath
+++ b/.classpath
@@ -20,5 +20,10 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="C:/Dependencies  for Java Projects/gson-2.9.1.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files (x86)/Google/Cloud SDK/google-cloud-sdk/platform/google_appengine/google/appengine/tools/java/lib/impl/appengine-api.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files (x86)/Google/Cloud SDK/google-cloud-sdk/platform/google_appengine/google/appengine/tools/java/lib/impl/appengine-api-stubs.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files (x86)/Google/Cloud SDK/google-cloud-sdk/platform/google_appengine/google/appengine/tools/java/lib/appengine-tools-api.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files (x86)/Google/Cloud SDK/google-cloud-sdk/platform/google_appengine/google/appengine/tools/java/lib/testing/appengine-testing.jar"/>
+	<classpathentry kind="lib" path="C:/Dependencies  for Java Projects/mockito-core-4.7.0.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
